// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityItem renders compact with a single persona correctly 1`] = `
<div
  className=
      ms-ActivityItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-sizing: border-box;
        color: #666666;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        justify-content: flex-start;
        line-height: 17px;
      }
  style={undefined}
>
  <div
    className=
        ms-ActivityItem-activityTypeIcon
        {
          color: #0078d4;
          font-size: 13px;
          height: 16px;
          line-height: 13px;
          margin-top: 1px;
        }
        & .ms-Persona-imageArea {
          border-radius: 50%;
          border: 2px solid#ffffff;
          margin-top: -2px;
        }
        @media screen and (-ms-high-contrast: active){& .ms-Persona-imageArea {
          border: none;
          margin-top: 0;
        }
  >
    <div
      className=
          ms-ActivityItem-personaContainer
          {
            display: inline-flex;
            flex-basis: auto;
            flex-wrap: nowrap;
            height: 16px;
            min-width: 0;
            padding-right: 6px;
            width: auto;
          }
    >
      <div
        className="ms-Persona-coin ms-Persona--size16 undefined"
        size={8}
        style={
          Object {
            "display": "inline-block",
            "minWidth": "10px",
            "overflow": "visible",
            "width": "10px",
          }
        }
      >
        <div
          className="ms-Persona-imageArea"
          style={undefined}
        >
          <div
            aria-hidden="true"
            className=
                ms-Persona-initials
                {
                  background-color: #2D89EF;
                }
            style={undefined}
          >
            <span>
              TN
            </span>
          </div>
          <div
            className=
                ms-Image
                ms-Persona-image
                {
                  overflow: hidden;
                  position: relative;
                }
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          >
            <img
              alt=""
              className=
                  ms-Image-image
                  ms-Image-image--cover
                  ms-Image-image--portrait
                  is-notLoaded
                  is-fadeIn
                  {
                    display: block;
                    height: auto;
                    left: 50% /* @noflip */;
                    opacity: 0;
                    position: absolute;
                    top: 50%;
                    transform: translate(-50%,-50%);
                    width: 100%;
                  }
              onError={[Function]}
              onLoad={[Function]}
              role={undefined}
              src={undefined}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-ActivityItem-activityContent
        {
          flex: 1;
          overflow-x: hidden;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
  >
    <span
      className=
          ms-ActivityItem-activityText
          {
            display: inline;
          }
    >
      <span>
        description text
      </span>
    </span>
  </div>
</div>
`;

exports[`ActivityItem renders compact with an icon correctly 1`] = `
<div
  className=
      ms-ActivityItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-sizing: border-box;
        color: #666666;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        justify-content: flex-start;
        line-height: 17px;
      }
  style={undefined}
>
  <div
    className=
        ms-ActivityItem-activityTypeIcon
        {
          color: #0078d4;
          font-size: 13px;
          height: 16px;
          line-height: 13px;
          margin-top: 1px;
        }
        & .ms-Persona-imageArea {
          border-radius: 50%;
          border: 2px solid#ffffff;
          margin-top: -2px;
        }
        @media screen and (-ms-high-contrast: active){& .ms-Persona-imageArea {
          border: none;
          margin-top: 0;
        }
  >
    <i
      aria-hidden={true}
      className=

          {
            display: inline-block;
          }
      data-icon-name="Message"
      role="presentation"
    />
  </div>
  <div
    className=
        ms-ActivityItem-activityContent
        {
          flex: 1;
          overflow-x: hidden;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
  >
    <span
      className=
          ms-ActivityItem-activityText
          {
            display: inline;
          }
    >
      <span>
        description text
      </span>
    </span>
  </div>
</div>
`;

exports[`ActivityItem renders compact with multiple personas correctly 1`] = `
<div
  className=
      ms-ActivityItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-sizing: border-box;
        color: #666666;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        justify-content: flex-start;
        line-height: 17px;
      }
  style={undefined}
>
  <div
    className=
        ms-ActivityItem-activityTypeIcon
        {
          color: #0078d4;
          font-size: 13px;
          height: 16px;
          line-height: 13px;
          margin-top: 1px;
        }
        & .ms-Persona-imageArea {
          border-radius: 50%;
          border: 2px solid#ffffff;
          margin-top: -2px;
        }
        @media screen and (-ms-high-contrast: active){& .ms-Persona-imageArea {
          border: none;
          margin-top: 0;
        }
  >
    <div
      className=
          ms-ActivityItem-personaContainer
          {
            display: inline-flex;
            flex-basis: auto;
            flex-wrap: nowrap;
            height: 16px;
            min-width: 0;
            padding-right: 6px;
            width: auto;
          }
    >
      <div
        className="ms-Persona-coin ms-Persona--size16 undefined"
        size={8}
        style={
          Object {
            "display": "inline-block",
            "minWidth": "10px",
            "overflow": "visible",
            "width": "10px",
          }
        }
      >
        <div
          className="ms-Persona-imageArea"
          style={undefined}
        >
          <div
            aria-hidden="true"
            className=
                ms-Persona-initials
                {
                  background-color: #2D89EF;
                }
            style={undefined}
          >
            <span>
              TN
            </span>
          </div>
          <div
            className=
                ms-Image
                ms-Persona-image
                {
                  overflow: hidden;
                  position: relative;
                }
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          >
            <img
              alt=""
              className=
                  ms-Image-image
                  ms-Image-image--cover
                  ms-Image-image--portrait
                  is-notLoaded
                  is-fadeIn
                  {
                    display: block;
                    height: auto;
                    left: 50% /* @noflip */;
                    opacity: 0;
                    position: absolute;
                    top: 50%;
                    transform: translate(-50%,-50%);
                    width: 100%;
                  }
              onError={[Function]}
              onLoad={[Function]}
              role={undefined}
              src={undefined}
            />
          </div>
        </div>
      </div>
      <div
        className="ms-Persona-coin ms-Persona--size16 undefined"
        size={8}
        style={
          Object {
            "display": "inline-block",
            "minWidth": "10px",
            "overflow": "visible",
            "width": "10px",
          }
        }
      >
        <div
          className="ms-Persona-imageArea"
          style={undefined}
        >
          <div
            className=
                ms-Image
                ms-Persona-image
                {
                  overflow: hidden;
                  position: relative;
                }
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          >
            <img
              alt=""
              className=
                  ms-Image-image
                  ms-Image-image--cover
                  ms-Image-image--portrait
                  is-notLoaded
                  is-fadeIn
                  {
                    display: block;
                    height: auto;
                    left: 50% /* @noflip */;
                    opacity: 0;
                    position: absolute;
                    top: 50%;
                    transform: translate(-50%,-50%);
                    width: 100%;
                  }
              onError={[Function]}
              onLoad={[Function]}
              role={undefined}
              src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-react-assets/persona-female.png"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-Persona-coin ms-Persona--size16 undefined"
        size={8}
        style={
          Object {
            "display": "inline-block",
            "minWidth": "10px",
            "overflow": "visible",
            "width": "10px",
          }
        }
      >
        <div
          className="ms-Persona-imageArea"
          style={undefined}
        >
          <div
            aria-hidden="true"
            className=
                ms-Persona-initials
                {
                  background-color: #00ABA9;
                }
            style={undefined}
          >
            <span>
              AN
            </span>
          </div>
          <div
            className=
                ms-Image
                ms-Persona-image
                {
                  overflow: hidden;
                  position: relative;
                }
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          >
            <img
              alt=""
              className=
                  ms-Image-image
                  ms-Image-image--cover
                  ms-Image-image--portrait
                  is-notLoaded
                  is-fadeIn
                  {
                    display: block;
                    height: auto;
                    left: 50% /* @noflip */;
                    opacity: 0;
                    position: absolute;
                    top: 50%;
                    transform: translate(-50%,-50%);
                    width: 100%;
                  }
              onError={[Function]}
              onLoad={[Function]}
              role={undefined}
              src={undefined}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-ActivityItem-activityContent
        {
          flex: 1;
          overflow-x: hidden;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
  >
    <span
      className=
          ms-ActivityItem-activityText
          {
            display: inline;
          }
    >
      <span>
        description text
      </span>
    </span>
  </div>
</div>
`;

exports[`ActivityItem renders with a single persona correctly 1`] = `
<div
  className=
      ms-ActivityItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: flex-start;
        box-sizing: border-box;
        color: #666666;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        justify-content: flex-start;
        line-height: 17px;
      }
  style={undefined}
>
  <div
    className=
        ms-ActivityItem-activityTypeIcon
        {
          font-size: 16px;
          height: 32px;
          line-height: 16px;
          margin-top: 3px;
        }
  >
    <div
      className=
          ms-ActivityItem-personaContainer
          {
            display: flex;
            flex-wrap: wrap;
            height: 32px;
            min-width: 32px;
            width: 32px;
          }
    >
      <div
        className="ms-Persona-coin ms-Persona--size32 undefined"
        size={11}
        style={undefined}
      >
        <div
          className="ms-Persona-imageArea"
          style={undefined}
        >
          <div
            aria-hidden="true"
            className=
                ms-Persona-initials
                {
                  background-color: #2D89EF;
                }
            style={undefined}
          >
            <span>
              TN
            </span>
          </div>
          <div
            className=
                ms-Image
                ms-Persona-image
                {
                  overflow: hidden;
                  position: relative;
                }
            style={
              Object {
                "height": 32,
                "width": 32,
              }
            }
          >
            <img
              alt=""
              className=
                  ms-Image-image
                  ms-Image-image--cover
                  ms-Image-image--portrait
                  is-notLoaded
                  is-fadeIn
                  {
                    display: block;
                    height: auto;
                    left: 50% /* @noflip */;
                    opacity: 0;
                    position: absolute;
                    top: 50%;
                    transform: translate(-50%,-50%);
                    width: 100%;
                  }
              onError={[Function]}
              onLoad={[Function]}
              role={undefined}
              src={undefined}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-ActivityItem-activityContent
        {
          padding-bottom: 0;
          padding-left: 8px;
          padding-right: 8px;
          padding-top: 0;
        }
  >
    <span
      className=
          ms-ActivityItem-activityText
          {
            display: inline;
          }
    >
      <span>
        description text
      </span>
    </span>
    <div
      className=
          ms-ActivityItem-commentText
          {
            color: #333333;
          }
    >
      <span>
        comment text
      </span>
    </div>
    <div
      className=
          ms-ActivityItem-timeStamp
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #666666;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 10px;
            font-weight: 400;
          }
    >
      timestamp text
    </div>
  </div>
</div>
`;

exports[`ActivityItem renders with an icon correctly 1`] = `
<div
  className=
      ms-ActivityItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: flex-start;
        box-sizing: border-box;
        color: #666666;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        justify-content: flex-start;
        line-height: 17px;
      }
  style={undefined}
>
  <div
    className=
        ms-ActivityItem-activityTypeIcon
        {
          font-size: 16px;
          height: 32px;
          line-height: 16px;
          margin-top: 3px;
        }
  >
    <i
      aria-hidden={true}
      className=

          {
            display: inline-block;
          }
      data-icon-name="Message"
      role="presentation"
    />
  </div>
  <div
    className=
        ms-ActivityItem-activityContent
        {
          padding-bottom: 0;
          padding-left: 8px;
          padding-right: 8px;
          padding-top: 0;
        }
  >
    <span
      className=
          ms-ActivityItem-activityText
          {
            display: inline;
          }
    >
      <span>
        description text
      </span>
    </span>
    <div
      className=
          ms-ActivityItem-commentText
          {
            color: #333333;
          }
    >
      <span>
        comment text
      </span>
    </div>
    <div
      className=
          ms-ActivityItem-timeStamp
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #666666;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 10px;
            font-weight: 400;
          }
    >
      timestamp text
    </div>
  </div>
</div>
`;

exports[`ActivityItem renders with multiple personas correctly 1`] = `
<div
  className=
      ms-ActivityItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: flex-start;
        box-sizing: border-box;
        color: #666666;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        justify-content: flex-start;
        line-height: 17px;
      }
  style={undefined}
>
  <div
    className=
        ms-ActivityItem-activityTypeIcon
        {
          font-size: 16px;
          height: 32px;
          line-height: 16px;
          margin-top: 3px;
        }
  >
    <div
      className=
          ms-ActivityItem-personaContainer
          {
            display: flex;
            flex-wrap: wrap;
            height: 32px;
            min-width: 32px;
            width: 32px;
          }
    >
      <div
        className="ms-Persona-coin ms-Persona--size16 undefined"
        size={8}
        style={undefined}
      >
        <div
          className="ms-Persona-imageArea"
          style={undefined}
        >
          <div
            aria-hidden="true"
            className=
                ms-Persona-initials
                {
                  background-color: #2D89EF;
                }
            style={undefined}
          >
            <span>
              TN
            </span>
          </div>
          <div
            className=
                ms-Image
                ms-Persona-image
                {
                  overflow: hidden;
                  position: relative;
                }
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          >
            <img
              alt=""
              className=
                  ms-Image-image
                  ms-Image-image--cover
                  ms-Image-image--portrait
                  is-notLoaded
                  is-fadeIn
                  {
                    display: block;
                    height: auto;
                    left: 50% /* @noflip */;
                    opacity: 0;
                    position: absolute;
                    top: 50%;
                    transform: translate(-50%,-50%);
                    width: 100%;
                  }
              onError={[Function]}
              onLoad={[Function]}
              role={undefined}
              src={undefined}
            />
          </div>
        </div>
      </div>
      <div
        className="ms-Persona-coin ms-Persona--size16 undefined"
        size={8}
        style={undefined}
      >
        <div
          className="ms-Persona-imageArea"
          style={undefined}
        >
          <div
            className=
                ms-Image
                ms-Persona-image
                {
                  overflow: hidden;
                  position: relative;
                }
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          >
            <img
              alt=""
              className=
                  ms-Image-image
                  ms-Image-image--cover
                  ms-Image-image--portrait
                  is-notLoaded
                  is-fadeIn
                  {
                    display: block;
                    height: auto;
                    left: 50% /* @noflip */;
                    opacity: 0;
                    position: absolute;
                    top: 50%;
                    transform: translate(-50%,-50%);
                    width: 100%;
                  }
              onError={[Function]}
              onLoad={[Function]}
              role={undefined}
              src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-react-assets/persona-female.png"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-Persona-coin ms-Persona--size16 undefined"
        size={8}
        style={undefined}
      >
        <div
          className="ms-Persona-imageArea"
          style={undefined}
        >
          <div
            aria-hidden="true"
            className=
                ms-Persona-initials
                {
                  background-color: #00ABA9;
                }
            style={undefined}
          >
            <span>
              AN
            </span>
          </div>
          <div
            className=
                ms-Image
                ms-Persona-image
                {
                  overflow: hidden;
                  position: relative;
                }
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          >
            <img
              alt=""
              className=
                  ms-Image-image
                  ms-Image-image--cover
                  ms-Image-image--portrait
                  is-notLoaded
                  is-fadeIn
                  {
                    display: block;
                    height: auto;
                    left: 50% /* @noflip */;
                    opacity: 0;
                    position: absolute;
                    top: 50%;
                    transform: translate(-50%,-50%);
                    width: 100%;
                  }
              onError={[Function]}
              onLoad={[Function]}
              role={undefined}
              src={undefined}
            />
          </div>
        </div>
      </div>
      <div
        className="ms-Persona-coin ms-Persona--size16 undefined"
        size={8}
        style={undefined}
      >
        <div
          className="ms-Persona-imageArea"
          style={undefined}
        >
          <div
            className=
                ms-Image
                ms-Persona-image
                {
                  overflow: hidden;
                  position: relative;
                }
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          >
            <img
              alt=""
              className=
                  ms-Image-image
                  ms-Image-image--cover
                  ms-Image-image--portrait
                  is-notLoaded
                  is-fadeIn
                  {
                    display: block;
                    height: auto;
                    left: 50% /* @noflip */;
                    opacity: 0;
                    position: absolute;
                    top: 50%;
                    transform: translate(-50%,-50%);
                    width: 100%;
                  }
              onError={[Function]}
              onLoad={[Function]}
              role={undefined}
              src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-react-assets/persona-male.png"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-ActivityItem-activityContent
        {
          padding-bottom: 0;
          padding-left: 8px;
          padding-right: 8px;
          padding-top: 0;
        }
  >
    <span
      className=
          ms-ActivityItem-activityText
          {
            display: inline;
          }
    >
      <span>
        description text
      </span>
    </span>
    <div
      className=
          ms-ActivityItem-commentText
          {
            color: #333333;
          }
    >
      <span>
        comment text
      </span>
    </div>
    <div
      className=
          ms-ActivityItem-timeStamp
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #666666;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 10px;
            font-weight: 400;
          }
    >
      timestamp text
    </div>
  </div>
</div>
`;
